--- a/style.css
+++ b/style.css
@@ -8,3 +8,9 @@
   border: 2px solid rgb(109, 106, 106);
   border-radius: 4px;
 }
+
+#buttons {
+  margin: 10px 0;
+  display: flex;
+  justify-content: center;
+}
